syntax = "proto3";
option go_package = "./";
package com.coralogix.alerts.v1;

import "com/coralogix/alerts/v1/date_time.proto";

message AlertActiveWhen {
  repeated AlertActiveTimeframe timeframes = 1;
}

message AlertActiveTimeframe {
  repeated DayOfWeek days_of_week = 1;
  TimeRange range = 2;
}

enum DayOfWeek {
  DAY_OF_WEEK_MONDAY_OR_UNSPECIFIED = 0;
  DAY_OF_WEEK_TUESDAY = 1;
  DAY_OF_WEEK_WEDNESDAY = 2;
  DAY_OF_WEEK_THURSDAY = 3;
  DAY_OF_WEEK_FRIDAY = 4;
  DAY_OF_WEEK_SATURDAY = 5;
  DAY_OF_WEEK_SUNDAY = 6;
}

message TimeRange {
  Time start = 1;
  Time end = 2;
}
