syntax = "proto3";
option go_package = "./";
package com.coralogix.alerts.v1;

import "google/protobuf/wrappers.proto";

message AlertFilters {
  enum LogSeverity {
    LOG_SEVERITY_DEBUG_OR_UNSPECIFIED = 0;
    LOG_SEVERITY_VERBOSE = 1;
    LOG_SEVERITY_INFO = 2;
    LOG_SEVERITY_WARNING = 3;
    LOG_SEVERITY_ERROR = 4;
    LOG_SEVERITY_CRITICAL = 5;
  }

  repeated LogSeverity severities = 1;

  message MetadataFilters {
    repeated google.protobuf.StringValue categories = 1;
    repeated google.protobuf.StringValue applications = 2;
    repeated google.protobuf.StringValue subsystems = 3;
    repeated google.protobuf.StringValue computers = 4;
    repeated google.protobuf.StringValue classes = 5;
    repeated google.protobuf.StringValue methods = 6;
    repeated google.protobuf.StringValue ip_addresses = 7;
  }

  MetadataFilters metadata = 2;

  google.protobuf.StringValue alias = 3;
  google.protobuf.StringValue text = 4;

  message RatioAlert {
    google.protobuf.StringValue alias = 1;
    google.protobuf.StringValue text = 2;
    repeated LogSeverity severities = 3;
    repeated google.protobuf.StringValue applications = 4;
    repeated google.protobuf.StringValue subsystems = 5;
    repeated google.protobuf.StringValue group_by = 6;
  }

  repeated RatioAlert ratio_alerts = 5;

  enum FilterType {
    FILTER_TYPE_TEXT_OR_UNSPECIFIED = 0;
    FILTER_TYPE_TEMPLATE = 1;
    FILTER_TYPE_RATIO = 2;
    FILTER_TYPE_UNIQUE_COUNT = 3;
    FILTER_TYPE_TIME_RELATIVE = 4;
    FILTER_TYPE_METRIC = 5;
    FILTER_TYPE_TRACING = 6;
    FILTER_TYPE_FLOW = 7;
  }

  FilterType filter_type = 6;
}
