syntax = "proto3";
option go_package = "./";
package com.coralogix.alerts.v1;

import "google/protobuf/wrappers.proto";

import "com/coralogix/alerts/v1/alert.proto";
import "com/coralogix/alerts/v1/alert_event.proto";
import "com/coralogix/alerts/v1/alert_severity.proto";
import "com/coralogix/alerts/v1/alert_condition.proto";
import "com/coralogix/alerts/v1/alert_notifications.proto";
import "com/coralogix/alerts/v1/alert_filters.proto";
import "com/coralogix/alerts/v1/alert_active_when.proto";
import "com/coralogix/alerts/v1/date_time.proto";
import "google/protobuf/descriptor.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "com/coralogix/alerts/v1/tracing_alert.proto";

message AuditLogDescription {
  optional string description = 1;
}

extend google.protobuf.MethodOptions {
  optional AuditLogDescription audit_log_description = 5000;
}

service AlertService {
  rpc GetAlert(GetAlertRequest) returns (GetAlertResponse) {
    option (audit_log_description).description = "get alert";
    option (google.api.http) = {
      get: "/api/v1/alerts/{id}"
    };
  }
  rpc GetAlerts(GetAlertsRequest) returns (GetAlertsResponse) {
    option (audit_log_description).description = "get alerts";
    option (google.api.http) = {
      get: "/api/v1/alerts"
    };
  }
  rpc GetAlertByUniqueId(GetAlertByUniqueIdRequest) returns (GetAlertByUniqueIdResponse) {
    option (audit_log_description).description = "get alert by unique id";
    option (google.api.http) = {
      get: "/api/v1/alerts/unique/{id}"
    };
  }
  rpc CreateAlert(CreateAlertRequest) returns (CreateAlertResponse) {
    option (audit_log_description).description = "create alert";
    option (google.api.http) = {
      post: "/api/v1/alerts/"
      body: "*"
    };
  }
  rpc UpdateAlert(UpdateAlertRequest) returns (UpdateAlertResponse) {
    option (audit_log_description).description = "update alert";
    option (google.api.http) = {
      put: "/api/v1/alerts/{alert.id}"
      body: "alert"
    };
  }
  rpc DeleteAlert(DeleteAlertRequest) returns (DeleteAlertResponse) {
    option (audit_log_description).description = "delete alert";
    option (google.api.http) = {
      delete: "/api/v1/alerts/{id}"
    };
  }
  rpc GetAlertEvents(GetAlertEventsRequest) returns (GetAlertEventsResponse) {
    option (audit_log_description).description = "get alert events";
    option (google.api.http) = {
      get: "/api/v1/alerts/events"
    };
  }
  rpc ValidateAlert(ValidateAlertRequest) returns (ValidateAlertResponse) {
    option (audit_log_description).description = "validate alert";
    option (google.api.http) = {
      post: "/api/v1/alerts/validate"
      body: "alert"
    };
  }
  rpc GetAlertEventsCountBySeverity(GetAlertEventsCountBySeverityRequest) returns (GetAlertEventsCountBySeverityResponse) {
    option (audit_log_description).description = "get alert events count by severity";
    option (google.api.http) = {
      get: "/api/v1/alerts/events/count-by-severity"
    };
  }
}

message GetAlertRequest {
  google.protobuf.StringValue id = 1;
}

message GetAlertResponse {
  Alert alert = 1;
}

message GetAlertByUniqueIdRequest {
  google.protobuf.StringValue id = 1;
}

message GetAlertByUniqueIdResponse {
  Alert alert = 1;
}

message CreateAlertRequest {
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;

  google.protobuf.BoolValue is_active = 4;

  AlertSeverity severity = 5;
  Date expiration = 6;

  AlertCondition condition = 7;
  AlertNotifications notifications = 8;
  AlertFilters filters = 9;

  google.protobuf.DoubleValue notify_every = 10;

  AlertActiveWhen active_when = 11;

  repeated google.protobuf.StringValue notification_payload_filters = 12;

  repeated MetaLabel meta_labels = 13;
  repeated google.protobuf.StringValue meta_labels_strings = 14;

  optional TracingAlert tracing_alert = 15;
}

message CreateAlertResponse {
  Alert alert = 1;
}

message UpdateAlertRequest {
  Alert alert = 1;
}

message UpdateAlertResponse {
  Alert alert = 1;
}

message DeleteAlertRequest {
  google.protobuf.StringValue id = 1;
}

message DeleteAlertResponse {
}

message GetAlertEventsRequest {
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
}

message GetAlertEventsResponse {
  repeated AlertEvent events = 1;
}

message GetAlertsRequest {
}

message GetAlertsResponse {
  repeated Alert alerts = 1;
}

message ValidateAlertRequest {
  Alert alert = 1;
}
message ValidateAlertResponse {
}

message GetAlertEventsCountBySeverityRequest {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
  repeated google.protobuf.StringValue applications = 3;
  repeated google.protobuf.StringValue subsystems = 4;
}

message GetAlertEventsCountBySeverityResponse {
  repeated AlertEventsCountBySeverity event_counts = 1;
}

message AlertEventsCountBySeverity {
  AlertSeverity severity = 1;
  AlertEventCountType type = 2;
  AlertEvent.AlertEventSubType sub_type = 3;
  google.protobuf.Int32Value count = 4;
}

enum AlertEventCountType {
  ALERT_EVENT_COUNT_TYPE_UNSPECIFIED = 0;
  ALERT_EVENT_COUNT_TYPE_ALERT = 1;
  ALERT_EVENT_COUNT_TYPE_ANOMALY = 2;
}