syntax = "proto3";
option go_package = "./";
package com.coralogix.alerts.v1;

import "google/protobuf/wrappers.proto";

message FlowStage {
  repeated FlowGroup groups = 1;
  FlowTimeframe timeframe = 2;
}

message FlowAlert {
  google.protobuf.StringValue id = 1;
  google.protobuf.BoolValue not = 2;
}

message FlowAlerts {
  FlowOperator op = 1;
  repeated FlowAlert values = 2;
}

message FlowGroup {
  FlowAlerts alerts = 1;
  FlowOperator nextOp = 2;
}

message FlowTimeframe {
  google.protobuf.UInt32Value ms = 1;
}

enum FlowOperator {
  AND = 0;
  OR = 1;
}